--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     ],
     "require": {
         "php": ">=5.5.0 || ^7.0",
-        "clue/graph-composer": "^1.0",
+        "clue/graph-composer": "^0.9.0",
         "graphp/graphviz": "^0.2.0",
-        "jms/composer-deps-analyzer": "^1.0.1",
+        "jms/composer-deps-analyzer": "0.1.*",
         "symfony/console": "^2.7 || ^3.0"
     },
     "autoload": {
