--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,5 @@
             "Kassko\\Composer\\GraphDependency\\": "src"
         }
     },
-    "bin": ["bin/graph-composer"]
+    "bin": ["bin/composer-dependency"]
 }
