Add script and rename script directory that was ignore by gitignore

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,5 @@
             "Kassko\\Composer\\GraphDependency\\": "src"
         }
     },
-    "bin": ["bin/composer-dependency"]
+    "bin": ["script/composer-dependency"]
 }
